Created a Logging Callback class

--- a/Mario-AI.ipynb
+++ b/Mario-AI.ipynb
@@ -11,16 +11,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym_super_mario_bros \n",
+    "import os\n",
     "from gym_super_mario_bros.actions import SIMPLE_MOVEMENT\n",
     "from nes_py.wrappers import JoypadSpace\n",
     "from gym.wrappers import GrayScaleObservation\n",
+    "from stable_baselines3 import PPO\n",
+    "from stable_baselines3.common.callbacks import BaseCallback\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv, VecFrameStack\n",
     "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainAndLoggingCallback(BaseCallback):\n",
+    "    def __init__(self, check_freq, save_path, verbose=1):\n",
+    "        super(TrainAndLoggingCallback, self).init_(verbose)\n",
+    "        self.check_freq = check_freq\n",
+    "        self.save_path = save_path\n",
+    "\n",
+    "    def _init_callback(self):\n",
+    "        if self.save_path is not None:\n",
+    "            os.makedirs(self.save_path, exist_ok=True)\n",
+    "        \n",
+    "    def _on_step(self):\n",
+    "        if self.n_calls % self.check_freq == 0:\n",
+    "            model_path = os.path.join(self.save_path, 'best_model_{}'.format(self.n_calls))\n",
+    "            self.model.save(model_path)"
    ]
   },
   {
@@ -69,6 +94,13 @@
     "    plt.imshow(obs[0][:,:,idx])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
